@@ -13,6 +13,7 @@
 * Patch 3011940: Add support for MFC (JTAnderson)
 * Patch 3053959: kind() crashes when called with no arguments (rjmyst3)
 * Bug 2997728: Project dependencies should be case-sensitive
+* Bug 3056381: Xcode project breaks on special chars
 * Fixed handling of icons in Xcode (bitshifter)
 * Added imagepath to set Xbox360 image file name (Jarod)
 
